--- a/style_menu.css
+++ b/style_menu.css
@@ -2,8 +2,14 @@
     color: black;
 }
 
-body{
-    width: 100%;
+body{width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex: 1 0 auto;
 }
 
 a{
@@ -17,9 +23,11 @@ header{
     z-index: 1;
     display: flex;
     width: 100%;
-    height:10vh ;
+    height: 10vh;
     background-color:#fdfdfd;
     align-items: center;
+    order: 1;
+    flex: 1 0 auto;
 }
 
 
@@ -35,6 +43,7 @@ ul.lien_header{
     position: relative;
     display: inline-flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     width: 30%;
     margin: 0 30px;
     text-transform: uppercase;
@@ -48,28 +57,30 @@ ul.lien_header{
 main{
     position: relative;
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: auto;
-    background-color: blue;
-    justify-content: center;
+    background-color:gray;
+    justify-content: space-around;
     align-items: center;
+    flex: 1 0 auto;
+    order: 2;
+    flex-wrap: wrap;
 }
 
 table{
-    width: 50%;
+    text-align: center;
+    width: 90%;
+    margin: 35px;
 }
 
 tr{
-    background-color: hotpink;
+    height: 5vh;
 }
-td{background-color: aqua;}
+td{ height: 10vh;
+}
 
-
-
-
-
-
-
+caption>h1{text-align: center;}
 
 
 /* le footer */
@@ -79,7 +90,8 @@ footer{
     height: 40vh;
     background-color: cornflowerblue;
     display: flex;
-}
+    order: 3;
+    flex: 1 0 auto;}
 
 
 .footer1{
@@ -87,6 +99,7 @@ footer{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex: 1 0 auto;
     width: 50%;
     font-size: 30px;
 }
@@ -96,21 +109,32 @@ footer{
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    flex: 1 0 auto;
     width: 50%;
 }
 
 
-.formulaire{
-height: 30px;
-}
+/* responsive */
+@media only screen and (min-width: 320px) and (max-width:425px) {
+    body{width: 100%;}
+    
+    
+    
+    
+    header{
+        position: sticky;
+        width:100%;
+        padding:10%;
+    }
+    ul.lien_header{
+        position: relative;
+        align-items: center;
+        justify-content: space-between;
+    }
+    table{
+        width: 100%;
+    }
+   
+  
 
-.formulaire:hover{
-    cursor: pointer;
-
-}
-
-.bouton{
-    height: 30px;
-    background-color:khaki;
-    cursor: pointer;
 }
