--- a/style/style.css
+++ b/style/style.css
@@ -27,7 +27,7 @@ header{
     z-index: 1;
     display: flex;
     width: 100%;
-    height: 10vh;
+    height: 20vh;
     background-color:#fdfdfd;
     align-items: center;
     order: 1;
@@ -36,9 +36,14 @@ header{
 
 .logo{
     text-transform: uppercase;
-    width: 30%;
-    height: auto;
+    width: 10%;
+    height: 20vh;
     list-style-type: none;
+    background-image: url(../images/logo.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-right: 20%;
 }
 
 ul.lien_header{
@@ -245,7 +250,7 @@ footer{
     position: relative;
     width: 100%;
     height:60vh;
-    background-color: cornflowerblue;
+    background-color:#4C1B1B;
     display: flex;
     order: 3;
     flex: 1 0 auto;}
