--- a/style/style_menu.css
+++ b/style/style_menu.css
@@ -23,21 +23,25 @@ header{
     z-index: 1;
     display: flex;
     width: 100%;
-    height: 10vh;
+    height: 20vh;
     background-color:#fdfdfd;
     align-items: center;
     order: 1;
     flex: 1 0 auto;
 }
-
-
-
 .logo{
     text-transform: uppercase;
-    width: 30%;
-    height: auto;
+    width: 10%;
+    height: 20vh;
     list-style-type: none;
+    background-image: url(../images/logo.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-right: 20%;
 }
+
+
 
 ul.lien_header{
     position: relative;
@@ -60,7 +64,7 @@ main{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background-color:gray;
+    background-color:#F6E497;
     justify-content: space-around;
     align-items: center;
     flex: 1 0 auto;
@@ -88,7 +92,7 @@ footer{
     position: relative;
     width: 100%;
     height: 60vh;
-    background-color: cornflowerblue;
+    background-color: #4C1B1B;
     display: flex;
     order: 3;
     flex: 1 0 auto;}
